kubernetes/0_namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ucontas-app
  labels:
    name: ucontas-app
