kubernetes/4_ucontas-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: ucontas-app
  labels:
    app: ucontas-api
  name: ucontas-api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ucontas-api
  template:
    metadata:
      labels:
        app: ucontas-api
    spec:
      containers:
        - args:
            - mvn
            - spring-boot:run
          image: uniliva/ucontas-api
          name: ucontas-api
          ports:
            - containerPort: 8080
          resources: {}
      restartPolicy: Always

---

# Service
apiVersion: v1
kind: Service
metadata:
  namespace: ucontas-app
  labels:
    app: ucontas-api
  name: ucontas-api-service
spec:
  type: NodePort
  ports:
    - port: 80
      nodePort: 31111
      targetPort: 8080
  selector:
    app: ucontas-api
