kubernetes/6_ucontas-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: ucontas-app
  name: ucontas-ingress
spec:
  rules:
  - host: "api.ucontas-app.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: ucontas-api-service
            port:
              number: 80
  - host: "ucontas-app.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: ucontas-front-service
            port:
              number: 80
